# AIOS

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.ai/: skill-coverage-audit.md  skill-display-quality-audit.md  skill-inventory-full-audit.md  ui-visual-consistency-audit.md  ui-visual-regression-report.md
.ai/scripts/: skill-inventory-full-audit.mjs
.github/workflows/: desktop-build-artifacts.yml  desktop-internal-release.yml
docs/: ARCHITECTURE.zh-CN.md  DESIGN_SYSTEM.zh-CN.md  DESKTOP_ARCHITECTURE.zh-CN.md  DESKTOP_CUSTOM_SCAN_SMOKE.zh-CN.md  DESKTOP_PRODUCT_RFC.zh-CN.md  DESKTOP_RELEASE_READINESS.zh-CN.md  DESKTOP_SHELL_SMOKE.zh-CN.md  DISCOVERY_SAFETY_ACCEPTANCE.zh-CN.md  GITHUB_ACTIONS_PACKAGING_PLAN.zh-CN.md  INTERNAL_RELEASE_PLAYBOOK.zh-CN.md  NATIVE_APP_DATA_ACCEPTANCE_0.1.0.zh-CN.md  PRODUCT_UX_ACCEPTANCE_0.1.0.zh-CN.md  RELEASE_BASELINE_0.1.0.zh-CN.md  ROADMAP.zh-CN.md  SAFETY.zh-CN.md  SCANNER_POLICY.zh-CN.md  TAURI_MIGRATION_PLAN.zh-CN.md  WIN_MAC_PACKAGING_COMPATIBILITY_AUDIT.zh-CN.md
docs/internal-trial/: AIOS_DESKTOP_FEEDBACK_TEMPLATE.zh-CN.md  AIOS_DESKTOP_INTERNAL_TRIAL_BUILD_RECORD.zh-CN.md  AIOS_DESKTOP_INTERNAL_TRIAL_GUIDE.zh-CN.md  AIOS_DESKTOP_SYNTHETIC_FIXTURE_GUIDE.zh-CN.md  AIOS_DESKTOP_TRIAL_CHECKLIST.zh-CN.md  README.zh-CN.md
docs/product/: README.zh-CN.md  (+15 more)
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
server/: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  resource_store.rs  scanner.rs
(+119 files in other folders)
