[package]
name = "aios-desktop"
version = "0.1.0"
description = "AIOS Desktop read-only shell"
authors = ["AIOS"]
edition = "2021"
rust-version = "1.77.2"
default-run = "aios-desktop"

[lib]
name = "aios_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aios-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
